--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,33 +5,25 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.temple.mobilelabseven.MainActivity">
+    android:paddingBottom="0dp"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
+    android:layout_weight="1"
+    tools:context="edu.temple.mobilelabseven.MainActivity"
+    android:measureWithLargestChild="false">
+
 
     <FrameLayout
-        android:id="@+id/actionBarLayout"
-        android:layout_weight=".6"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <FrameLayout
-        android:layout_weight=".6"
-        android:id="@+id/addressBarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <FrameLayout
-        android:layout_weight=".2"
         android:id="@+id/webPageLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-
-
-
+        android:layout_height="match_parent"
+        android:padding="0dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="0dp"
+        android:layout_weight="1" />
 
 
 
