--- a/app/src/main/res/layout/activity_web_page_fragment.xml
+++ b/app/src/main/res/layout/activity_web_page_fragment.xml
@@ -1,20 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
+    android:layout_weight="1"
     tools:context="edu.temple.mobilelabseven.WebPageFragment">
+<TableRow>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="http://"
+        android:ems="10"
+        android:id="@+id/urlText"
+        android:layout_gravity="center_vertical" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="go"
+        android:id="@+id/goButton"
+        android:layout_gravity="center_vertical" />
+</TableRow>
+
 
     <WebView
         android:layout_width="match_parent"
-        android:layout_height="483dp"
+        android:layout_height="match_parent"
         android:id="@+id/webView"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
 
-</LinearLayout>
+</TableLayout>
